--- a/table.html
+++ b/table.html
@@ -121,7 +121,69 @@
                 <td colspan="2">Lab</td>
             </tr>
         </table>
-
+        <br>
         
+        <table border = 3pxs > 
+            <caption>Lan's Timetable</caption>
+            <tr>
+                <td> </td>
+                <td> </td>
+                <th colspan="3">Morning</th>
+                <th>Lunch</th>
+                <th colspan="4">Afternoon</th>
+                <th colspan="3">Evening</th>
+            </tr>
+            <tr>
+                <td> </td>
+                <td> </td>
+                <td>9-10 am</td>
+                <td>10-11 am</td>
+                <td>11-12 am</td>
+                <td>1-2 pm</td>
+                <td>2-3 pm</td>
+                <td>3-4 pm</td>
+                <td>4-5 pm</td>
+                <td>5-6 pm</td>
+                <td>6-7 pm</td>
+                <td>7-8 pm</td>
+                <td>8-9 pm</td>
+            </tr>
+            <tr>
+                <td rowspan="2"><p align = center>Work</p></td>
+                <td><p align = center>Monday</p></td>
+                <td colspan="3"><p align = center>Development meeting</p></td>
+                <td> </td>
+                <td colspan="3"><p align = center>Client Meeting</p></td>
+                <td>Commute</td>
+                <td colspan="3"><p align = center>Free</p></td>
+            </tr>
+            <tr>
+                <td><p align = center>Tuesday</p></td>
+                <td colspan="3"> <p align = center>In office</p></td>
+                <td> </td>
+                <td colspan="7"><p align = center>In office</p></td>
+            </tr>
+            <tr>
+                <td rowspan="2"><p align = center>Lecture</p></td>
+                <td><p align = center>Wednesday</p></td>
+                <td colspan="3"><p align = center>CSC205</p></td>
+                <td> </td>
+                <td colspan="7"><p align = center>Prepration</p></td>
+            </tr>
+            <tr>
+                <td><p align = center>Thursday</p></td>
+                <td colspan="3"><p align = center>MAM200</p></td>
+                <td> </td>
+                <td colspan="3"><p align = center>Tutorials for MAM200</p></td>
+                <td colspan="4"><p align = center>Free</p></td>
+            </tr>
+            <tr>
+                <td><p align = center>Research</p></td>
+                <td><p align = center>Friday</p></td>
+                <td colspan="3"><p align = center>Research</p></td>
+                <td> </td>
+                <td colspan="7"><p align = center>Research</p></td>
+            </tr>
+        </table>     
     </body>
 </html>
